Add licenses to sync-application